chore:test github release

--- a/project.json
+++ b/project.json
@@ -16,6 +16,12 @@
     "releaseTagPattern": "{version}",
     "version": {
       "conventionalCommits": true
+    },
+    "changelog": {
+      "workspaceChangelog": {
+        "file": false,
+        "createRelease": "github"
+      }
     }
   }
 }
