--- a/nx.json
+++ b/nx.json
@@ -109,8 +109,15 @@
     }
   },
   "release": {
+    "projects": ["packages/*"],
     "version": {
-      "preVersionCommand": "pnpm dlx nx run-many -t build"
+      "conventionalCommits": true
+    },
+    "changelog": {
+      "workspaceChangelog": {
+        "file": false,
+        "createRelease": "github"
+      }
     }
   }
 }
